Fix button name on snippets create on mobile adaptivity

--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -268,5 +268,10 @@
       margin: 0;
     }
 
+    .btn-pink, .btn-blue
+    {
+      font-size: 0.77em !important;
+    }
+
 
 }
